--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="nav" class="uk-position-top" style="background-color: #222222">
 			<nav class="uk-navbar-container uk-navbar-transparent uk-light uk-navbar" uk-navbar="">
 				<div class="uk-navbar-left">
-					<a href="https://www.zstuca.club/"><img src="./assets/img/top.jpg" style="margin-left: 10px; margin-top: 5px; width: 200px; height: auto;"></img></a>
+					<a href="http://www.zstuca.club/"><img src="./assets/img/top.jpg" style="margin-left: 10px; margin-top: 5px; width: 200px; height: auto;"></img></a>
 				</div>
 				<div class="uk-navbar-right uk-margin-small-right">
 					<ul class="uk-navbar-nav uk-visible@m">
@@ -121,8 +121,8 @@
 			<div>
 				<div class="header">JOIN US</div>
 				<div class="content">做有实力有态度的大学生</div>
-				<a class="button" href="https://wj.qq.com/s2/4562913/4f2c/" target="_self">加入我们</a>
-				<a target="_blank" href="./download/2019年计算机协会纳新宣讲.pptx" title="纳新宣讲PPT" download="2019年计算机协会纳新宣讲.pptx">
+				<a class="button" href="https://www.wjx.cn/jq/91263621.aspx" target="_self">加入我们</a>
+				<a target="_blank" href="./download/2020计协纳新宣传.pptx" title="纳新宣讲PPT" download="2020计协纳新宣传.pptx">
 					<svg class="ppt_download">
 						<use xlink:href="./assets/svg/symbol_svg.svg#ppt"></use>
 					</svg>
@@ -213,12 +213,12 @@
 					    <div class="uk-card-header">
 					        <div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
 					            <div class="uk-width-auto uk-first-column">
-					                <a href="#" target="_blank">
+					                <a href="http://stu.zstu.edu.cn" target="_blank">
 					                	<img class="uk-border-circle" width="50" height="50" src="./assets/img/8267138.jpg">
 					                </a>
 					            </div>
 					            <div class="uk-width-expand">
-					                <a href="#" target="_blank" style="text-decoration:none;">
+					                <a href="http://stu.zstu.edu.cn" target="_blank" style="text-decoration:none;">
 					                	<h2 class="uk-card-title uk-margin-remove-bottom">E 浙理</h2>
 					                </a>
 					            </div>
@@ -265,12 +265,12 @@
 					    <div class="uk-card-header">
 					        <div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
 					            <div class="uk-width-auto uk-first-column">
-					                <a href="#" target="_blank">
+					                <a href="http://47.96.116.66/loginpage.php" target="_blank">
 					                	<img class="uk-border-circle" width="50" height="50" src="./assets/img/8276279.jpg">
 					                </a>
 					            </div>
 					            <div class="uk-width-expand">
-					                <a href="#" target="_blank" style="text-decoration:none;">
+					                <a href="http://47.96.116.66/loginpage.php" target="_blank" style="text-decoration:none;">
 					                	<h2 class="uk-card-title uk-margin-remove-bottom">ACM OJ Platform</h2>
 					                </a>
 					            </div>
@@ -316,12 +316,12 @@
 					    <div class="uk-card-header">
 					        <div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
 					            <div class="uk-width-auto uk-first-column">
-					                <a href="http://ctf.qiuyitech.com" target="_blank">
+					                <a href="https://ctf.hzyxxl.com/" target="_blank">
 					                	<img class="uk-border-circle" width="50" height="50" src="./assets/img/12481493.jpg">
 					                </a>
 					            </div>
 					            <div class="uk-width-expand">
-					                <a href="http://ctf.qiuyitech.com" target="_blank" style="text-decoration:none;">
+					                <a href="https://ctf.hzyxxl.com/" target="_blank" style="text-decoration:none;">
 					                	<h2 class="uk-card-title uk-margin-remove-bottom">CTF OJ Platform</h2>
 					                </a>
 					            </div>
@@ -391,19 +391,19 @@
 					    <div class="uk-card-header">
 					        <div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
 					            <div class="uk-width-auto uk-first-column">
-					                <a href="./case/tiku/" target="_blank">
+					                <a href="./case/tiku/2020年浙江理工大学易班优课YOOC浙理考试题库三年整合版.xlsx" target="_blank">
 					                	<img class="uk-border-circle" width="50" height="50" src="./assets/img/10986332.jpg">
 					                </a>
 					            </div>
 					            <div class="uk-width-expand">
-					                <a href="./case/tiku/" target="_blank" style="text-decoration:none;">
-					                	<h2 class="uk-card-title uk-margin-remove-bottom">易班 题库 2019</h2>
+					                <a href="./case/tiku/2020年浙江理工大学易班优课YOOC浙理考试题库三年整合版.xlsx" target="_blank" style="text-decoration:none;">
+					                	<h2 class="uk-card-title uk-margin-remove-bottom">易班 题库 2020</h2>
 					                </a>
 					            </div>
 					        </div>
 					    </div>
 					    <div class="uk-card-body">
-					        <p style="text-indent:2em">2019年浙江理工大学本科新生易班优课YOOC浙理考试题库</p>
+					        <p style="text-indent:2em">2020年浙江理工大学本科新生易班优课YOOC浙理考试题库</p>
 					    </div>
 					    <div class="uk-card-footer">
 					        <a href="./case/tiku/" class="uk-button uk-button-text" target="_blank">Let's find more</a>
@@ -625,7 +625,7 @@
 										<use xlink:href="./assets/svg/symbol_svg.svg#weibo_icon"></use>
 									</svg>
 								</a>
-								<a class="footer_circle" title="QQ" href="https://shang.qq.com/wpa/qunwpa?idkey=d6985743b1e1d78c44419c9f22c349590cce098288f4691f2f06753f03e4b1f8" target="_blank">
+								<a class="footer_circle" title="QQ" href="https://qm.qq.com/cgi-bin/qm/qr?k=gUJFlWKpUg9hMUVKGgx4gvsl94aK0c1l&jump_from=webapi" target="_blank">
 									<svg style="height: 28px;width:28px;">
 										<use xlink:href="./assets/svg/symbol_svg.svg#qq_icon" height="100%" width="100%"></use>
 									</svg>
@@ -641,17 +641,16 @@
 										<div style="text-align: center">微信搜索【浙理计协】</div>
 									</div>
 								</div>
-								<a class="footer_circle" title="加入我们" href="https://wj.qq.com/s2/4562913/4f2c/
-								" target="_self">
+								<!-- <a class="footer_circle" title="加入我们" href="https://www.wjx.cn/jq/91263621.aspx" target="_self">
 									<svg>
 										<use xlink:href="./assets/svg/symbol_svg.svg#add"></use>
 									</svg>
-								</a>
+								</a> -->
 						</div>
 					
 						<ul style="list-style: none;text-align: center">
-							<li><span class="uk-text-meta">Copyright @ 2019 ZSTUCA</span></li>
-							<li><span class="uk-text-meta"><a href="http://xinxi.zstu.edu.cn/" target="_blank">School of Information Sdence and Technology</a></span></li>
+							<li><span class="uk-text-meta">Copyright @ 2020 ZSTUCA</span></li>
+							<li><span class="uk-text-meta"><a href="http://xinxi.zstu.edu.cn/" target="_blank">School of Information Science and Technology</a></span></li>
 							<li><span class="uk-text-meta"><a href="http://www.zstu.edu.cn/" target="_blank">ZheJiang Sci-Tech University</a></span></li>
 							<li><span class="uk-text-meta">Sponsored by <a href="https://www.aliyun.com/" target="_blank">Aliyun</a></span></li>
 						</ul>
@@ -660,12 +659,12 @@
 						<h3 style="font-size: 23px; margin-bottom: 10px;margin-right: 10px">Links</h3>	
 						<ul class="uk-navbar-right uk-navbar-nav" style="margin-top: 0px; padding-left: 20px;">
 							<li><a href="https://github.com/ZSTUCA-TEAM" target="_blank">Github</a></li>
-							<li><a href="#" target="_blank">开源镜像</a></li>
+							<li><a href="https://mirrors.tuna.tsinghua.edu.cn/" target="_blank">开源镜像</a></li>
 							<!-- <li><a href="./download/Zstuca_1.0.rar" target="_blank">开源代码</a></li> -->
 							<li><a href="./tag/reservation/" target="_blank">维修预约</a></li>
 							<li><a href="http://stu.zstu.edu.cn" target="_blank">E浙理</a></li>
 							<li><a href="http://oj.acm.zstu.edu.cn/JudgeOnline/" target="_blank">ZSTU ACM</a></li>
-							<li><a href="http://ctf.qiuyitech.com" target="_blank">ZSTU CTF</a></li>
+							<li><a href="https://ctf.hzyxxl.com/" target="_blank">ZSTU CTF</a></li>
 							<li><a href="./case/Cyber/" target="_blank">ZSTU Cyber</a></li>
 						</ul>
 					</div>
