--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -699,21 +699,21 @@
 						<div style="margin-top: 0px; padding-left: 20px;">
 							<a class="footer_circle" title="微博" href="https://weibo.com/u/3909131252" target="_blank">
 								<svg>
-									<use xlink:href="/svg/symbol_svg.svg#weibo_icon"></use>
+									<use xlink:href="/assets/svg/symbol_svg.svg#weibo_icon"></use>
 								</svg>
 							</a>
 							<a class="footer_circle" title="QQ"
 								href="https://qm.qq.com/cgi-bin/qm/qr?k=gUJFlWKpUg9hMUVKGgx4gvsl94aK0c1l&jump_from=webapi"
 								target="_blank">
 								<svg style="height: 28px;width:28px;">
-									<use xlink:href="/svg/symbol_svg.svg#qq_icon" height="100%" width="100%"></use>
+									<use xlink:href="/assets/svg/symbol_svg.svg#qq_icon" height="100%" width="100%"></use>
 								</svg>
 								<!-- <img border="0" src="https://pub.idqqimg.com/wpa/images/group.png" alt="计算机协会2019萌新群" title="计算机协会2019萌新群"> -->
 							</a>
 
 							<div class="link_button footer_circle popover_ctl" id="wechat">
 								<svg>
-									<use xlink:href="/svg/symbol_svg.svg#wechat_icon"></use>
+									<use xlink:href="/assets/svg/symbol_svg.svg#wechat_icon"></use>
 								</svg>
 								<div class="wechat_code_bg popoverinfo">
 									<img src="/assets/img/wechatcode.png" class="wechat_code">
