--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -229,13 +229,13 @@
 				</div>
 			</div>
 		</div>
-		<div id="showcase" class="uk-section" style="min-height:1000px ;background-color: white;">
+		<div id="showcase" class="uk-section" style="background-color: white;">
 			<h1 class="uk-heading-divider uk-heading-primary" style="text-align:center;">Achievement And Participation
 			</h1>
 			<div class="uk-child-width-expand@s uk-text-center uk-grid-parallax uk-grid" uk-grid-parallax=""
-				style="margin-top: 5vw; margin-bottom: 150px;">
+				style="margin-top: 5vw;">
 
-				<div class="uk-animation-toggle" style="margin-top: 30px;">
+				<div class="uk-animation-toggle" style="margin-top: 30px;min-height: 373px;">
 					<div class="uk-card uk-card-default">
 						<div class="uk-card-header">
 							<div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
@@ -246,7 +246,7 @@
 											src="/assets/img/10986332.jpg">
 									</a>
 								</div>
-								<div class="uk-width-expand">
+								<div class="uk-width-expand" style="min-height: 68px;">
 									<a href="https://mp.weixin.qq.com/s?__biz=MzI0OTA4NTY4NQ==&mid=502017012&idx=1&sn=4b46450ec82b108875f24eb723151927&chksm=718e606e46f9e97899994528b35619da30e660adb2fff2c15aed16279f4bd65e1686819ec518&mpshare=1&scene=23&srcid=&sharer_sharetime=1567068845250&sharer_shareid=ca23a9d8f7e53c25a1fb8eb623d9e269#rd"
 										target="_blank" style="text-decoration:none;">
 										<h2 class="uk-card-title uk-margin-remove-bottom">软件库</h2>
@@ -254,7 +254,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="uk-card-body">
+						<div class="uk-card-body" style="min-height:120px">
 							<p>一个由计协提供的为浙江理工大学师生提供软件下载和安装的软件库。</p>
 						</div>
 						<div class="uk-card-footer">
@@ -263,7 +263,7 @@
 					</div>
 				</div>
 
-				<div class="uk-animation-toggle">
+				<div class="uk-animation-toggle" style="margin-top: 30px;min-height: 373px;">
 					<div class="uk-card uk-card-default">
 						<div class="uk-card-header">
 							<div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
@@ -273,7 +273,7 @@
 											src="/assets/img/8276279.jpg">
 									</a>
 								</div>
-								<div class="uk-width-expand">
+								<div class="uk-width-expand" style="min-height: 68px;">
 									<a href="http://47.96.116.66/loginpage.php" target="_blank"
 										style="text-decoration:none;">
 										<h2 class="uk-card-title uk-margin-remove-bottom">ACM Online Judge</h2>
@@ -281,7 +281,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="uk-card-body">
+						<div class="uk-card-body" style="min-height:120px">
 							<p style="text-indent:2em">ACM OJ平台是浙江理工大学ACM集训队队员练习与比赛，同时开放给全校有志向加入ACM集训队的大一新生的做题平台。
 							</p>
 						</div>
@@ -291,7 +291,7 @@
 					</div>
 				</div>
 
-				<div class="uk-animation-toggle" style="margin-top: 30px;">
+				<div class="uk-animation-toggle" style="margin-top: 30px;min-height: 373px;">
 					<div class="uk-card uk-card-default ">
 						<div class="uk-card-header">
 							<div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
@@ -301,7 +301,7 @@
 											src="/assets/img/10986332.jpg">
 									</a>
 								</div>
-								<div class="uk-width-expand">
+								<div class="uk-width-expand" style="min-height: 68px;">
 									<a href="/xuzhi/2019年浙江理工大学新生须知-3.65.pdf" target="_blank"
 										style="text-decoration:none;">
 										<h2 class="uk-card-title uk-margin-remove-bottom">ZSTU Fresh</h2>
@@ -309,7 +309,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="uk-card-body">
+						<div class="uk-card-body" style="min-height:120px">
 							<p style="text-indent:2em">浙江理工大学新生生存手册 WORD文档——网页版 </p>
 						</div>
 						<div class="uk-card-footer">
@@ -319,7 +319,7 @@
 					</div>
 				</div>
 
-				<div class="uk-animation-toggle" style="margin-top: 30px;">
+				<div class="uk-animation-toggle" style="margin-top: 30px;min-height: 373px;">
 					<div class="uk-card uk-card-default ">
 						<div class="uk-card-header">
 							<div class="uk-grid-small uk-flex-middle uk-grid" uk-grid="">
@@ -329,7 +329,7 @@
 											src="/assets/img/10986332.jpg">
 									</a>
 								</div>
-								<div class="uk-width-expand">
+								<div class="uk-width-expand" style="min-height: 68px;">
 									<a href="/tiku/2020年浙江理工大学易班优课YOOC浙理考试题库三年整合版.xlsx" target="_blank"
 										style="text-decoration:none;">
 										<h2 class="uk-card-title uk-margin-remove-bottom">易班 题库 2020</h2>
@@ -337,7 +337,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="uk-card-body">
+						<div class="uk-card-body" style="min-height:120px">
 							<p style="text-indent:2em">2020年浙江理工大学本科新生始业教育易班优课YOOC浙理考试题库</p>
 						</div>
 						<div class="uk-card-footer">
@@ -397,7 +397,7 @@
 						<li class="uk-active">
 							<div class="uk-card uk-card-default">
 								<div class="uk-card-media-top">
-									<img src="/assets/img/pexels-photo-590701.jpeg" alt=""
+									<img src="/assets/img/pexels-photo-1148820.jpeg" alt=""
 										style="height: 350px;width: 100vw">
 								</div>
 								<div class="uk-card-body">
@@ -436,7 +436,7 @@
 						<li>
 							<div class="uk-card uk-card-default">
 								<div class="uk-card-media-top">
-									<img src="/assets/img/technology-computer-chips-gigabyte.jpg" alt=""
+									<img src="/assets/img/pexels-photo-590701.jpeg" alt=""
 										style="height: 350px;width: 100vw">
 								</div>
 								<div class="uk-card-body">
@@ -449,21 +449,7 @@
 						<li style="order: -2;">
 							<div class="uk-card uk-card-default">
 								<div class="uk-card-media-top">
-									<img src="/assets/img/pexels-photo-1099298.jpeg" alt=""
-										style="height: 350px;width: 100vw">
-								</div>
-								<div class="uk-card-body">
-									<h3 class="uk-card-title">宣传部</h3>
-									<p>ZSTUCA
-										宣传部主要负责协会的外宣工作。主要包括活动前宣传稿的撰写，海报的设计。活动中的拍照记录，协助管理；活动后的通讯稿撰写。此外，协会微信公众平台的建设也是宣传的重要部分，包括活动预告的推送，活动总结的推送等等。
-									</p>
-								</div>
-							</div>
-						</li>
-						<li style="order: -2;">
-							<div class="uk-card uk-card-default">
-								<div class="uk-card-media-top">
-									<img src="/assets/img/pexels-photo-1148820.jpeg" alt=""
+									<img src="/assets/img/technology-computer-chips-gigabyte.jpg" alt=""
 										style="height: 350px;width: 100vw">
 								</div>
 								<div class="uk-card-body">
