--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -513,7 +513,8 @@
 									<use xlink:href="/assets/svg/symbol_svg.svg#weibo_icon"></use>
 								</svg>
 							</a>
-							<a class="footer_circle" title="QQ" href="tencent://message/?uin=438744945&Site=&Menu=yes"
+							<a class="footer_circle" title="QQ"
+								href="https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=EyNFRw032Gm2KU8STJymGLHnyIGg9-pk&authKey=31%2BJv68EHCloqkDPIpYstn%2FtgdBevdw46jwIIqSNrL0LzUIFVXPCHiz5PgihTUP5&noverify=0&group_code=438744945"
 								target="_blank">
 								<svg style="height: 28px;width:28px;">
 									<use xlink:href="/assets/svg/symbol_svg.svg#qq_icon" height="100%" width="100%">
