--- a/webapp/static/repair/index.html
+++ b/webapp/static/repair/index.html
@@ -21,30 +21,30 @@
         </div>
         <form id="applyInfo" action="/repair/apply" method="post" onsubmit="return postRepair()" class="my-5">
             <div class="my-3">
-                <label for="name" class="form-label">姓名:</label>
+                <label for="name" class="form-label text-nowrap">姓名:</label>
                 <input required type="text" id="name" name="name" class="form-control">
             </div>
             <div class="my-3">
-                <label for="gender" class="form-label">性别:</label>
+                <label for="gender" class="form-label text-nowrap">性别:</label>
                 <select id="gender" name="gender" class="form-select">
                     <option>先生</option>
                     <option>女士</option>
                 </select>
             </div>
             <div class="my-3">
-                <label for="academy" class="form-label">学院:</label>
+                <label for="academy" class="form-label text-nowrap">学院:</label>
                 <input required type="text" id="academy" name="academy" class="form-control">
             </div>
             <div class="my-3">
-                <label for="cardId" class="form-label">学号(工号):</label>
+                <label for="cardId" class="form-label text-nowrap">学号(工号):</label>
                 <input required type="text" id="cardId" name="cardId" class="form-control">
             </div>
             <div class="my-3">
-                <label for="email" class="form-label">邮箱:</label>
+                <label for="email" class="form-label text-nowrap">邮箱:</label>
                 <input required type="email" id="email" name="email" class="form-control">
             </div>
             <div class="my-3">
-                <label for="contact" class="form-label">即时通讯联系方式:</label>
+                <label for="contact" class="form-label text-nowrap">即时通讯联系方式:</label>
                 <div class="input-group">
                     <div class="col-3 col-md-1 col-lg-1 col-xl-1">
                         <select id="contactType" name="contactType" class="form-select">
@@ -57,16 +57,16 @@
                 </div>
             </div>
             <div class="my-3">
-                <label for="computerType" class="form-label">电脑型号:</label>
+                <label for="computerType" class="form-label text-nowrap">电脑型号:</label>
                 <input type="text" id="computerType" name="computerType" class="form-control">
             </div>
             <div class="my-3">
-                <label for="problem" class="form-label">遇到的问题:</label>
+                <label for="problem" class="form-label text-nowrap">遇到的问题:</label>
                 <input required type="text" id="problem" name="problem" class="form-control">
             </div>
 
             <div class="my-3">
-                <label for="location" class="form-label">宿舍(办公室)门牌号:</label>
+                <label for="location" class="form-label text-nowrap">宿舍(办公室)门牌号:</label>
                 <p class="small">暂不支持临平校区</p>
                 <div class="input-group">
                     <div class="col-5 col-md-2 col-lg-2 col-xl-2">
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="text-center mt-5">
-                <button type="submit" class="btn btn-primary nowrap" style="width: 100%;">提交</button>
+                <button type="submit" class="btn btn-primary text-nowrap" style="width: 100%;">提交</button>
             </div>
         </form>
     </div>
